Closed Bug 290425 Opened 21 years ago Closed 21 years ago

Selection details leak

Categories

(Core :: DOM: Selection, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: rbs, Assigned: rbs)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
Assignee: selection → rbs
Status: NEW → ASSIGNED
Attachment #180772 - Flags: superreview?(bzbarsky)
Attachment #180772 - Flags: review?(bzbarsky)
Comment on attachment 180772 [details] [diff] [review] fix r+sr=bzbarsky, but shouldn't we actually skip looking at some of the output of LookUpSelection() if it returns error? Separate bug fodder, I guess...
Attachment #180772 - Flags: superreview?(bzbarsky)
Attachment #180772 - Flags: superreview+
Attachment #180772 - Flags: review?(bzbarsky)
Attachment #180772 - Flags: review+
Yeah. There are several spots in that file where the return status of LookUpSelection() is ignored... I assume this leads to null selection details (and useless operations on that).
Comment on attachment 180772 [details] [diff] [review] fix Asking approval for 1.8b2. The patch fixes a memory leak on a codepath that is accessed frequently.
Attachment #180772 - Flags: approval1.8b2?
Attachment #180772 - Flags: approval1.8b2? → approval1.8b2+
> I assume this leads to null selection details (and useless operations on > that). Would that it were so! See http://lxr.mozilla.org/seamonkey/source/layout/generic/nsSelection.cpp#2639 Any particular call to LookUpSelection in that loop can fail, but that failure will be ignored; all that will happen is there will be no details for that selection type in the list; the previous ones will still be there...
I was referring to nsTextFrame. Either way, null details and/or returns failure don't create issues at present, except perhaps useless operations (in nsTextFrame) which are minor. Checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
> don't create issues at present I can see it leading to wrong rendering, in general. Then again, it's not clear to me what the best course of action is on OOM while trying to render.
s/issues/critical issues/... Yeah, there is very little room for manoeuvring.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: