Selection details leak, b=290425, r+sr=bzbarsky, a=asa